syntax = 'proto3';

package paracosm.types.api;

service Api {
    rpc CreateUser(CreateUserReq) returns (CreateUserResp);
    rpc CurrentUser(CurrentUserReq) returns (CurrentUserResp);

    rpc ListSandboxes(ListSandboxesReq) returns (ListSandboxesResp);
    rpc CreateSandbox(CreateSandboxReq) returns (CreateSandboxResp);
    rpc UpdateSandbox(UpdateSandboxReq) returns (UpdateSandboxResp);
    rpc BootSandbox(BootSandboxReq) returns (BootSandboxResp);
}

message CurrentUserReq {}
message CurrentUserResp {
    string id = 1;
    string email = 2;
    string name = 3;
}

message CreateUserReq {
    string email = 1;
    string name = 2;
}

message CreateUserResp {
    bytes id = 1;
}

message CreateSandboxReq {
    string name = 1;
    string code = 2;
}

message CreateSandboxResp {
    bytes id = 1;
}

message UpdateSandboxReq {
    bytes id = 1;
    string name = 2;
    string code = 3;
}

message UpdateSandboxResp {}

message BootSandboxReq {
    bytes id = 1;
}

message BootSandboxResp {}

message Sandbox {
    string name = 1;
    string code = 2;
}

message Page {
    bytes last_id = 1;
    uint32 count = 2;
}

message ListSandboxesReq {
    Page page = 1;
}

message ListSandboxesResp {
    repeated Sandbox sandboxes = 1;
    Page next_page = 2;
}
